--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -12,3 +12,10 @@
 /Runner$3.class
 /Runner$4.class
 /Runner$5.class
+/GamePanels.class
+/GamePanels$1.class
+/GamePanels$2.class
+/GamePanels$3.class
+/GamePanels$4.class
+/GamePanels$5.class
+/GamePanels$MyKeyListener.class
