initial commit for ghost_mode and Bird class

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,21 +1,1 @@
-/Box.class
-/Cat.class
-/Coin.class
-/Door.class
-/Object.class
-/Runner.class
-/Stage$TAdapter.class
-/Stage.class
-/Runner$1.class
-/Runner$MyKeyListener.class
-/Runner$2.class
-/Runner$3.class
-/Runner$4.class
-/Runner$5.class
-/GamePanels.class
-/GamePanels$1.class
-/GamePanels$2.class
-/GamePanels$3.class
-/GamePanels$4.class
-/GamePanels$5.class
-/GamePanels$MyKeyListener.class
+/Cat$1.class
