Lower ghost generation rate, might still make lower (taking off now after delay)

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,3 @@
-/Runner.class
-/Score.class
-/Stage$TAdapter.class
-/Stage.class
-/StageTest.class
+/Cat$2.class
+/GameGraphics$1.class
+/Cat$1.class
