upload Kelvin's commit for StageTest update

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,3 +3,8 @@
 /Cat$1.class
 /CatTest.class
 /ScoreTest.class
+/GamePanels$1.class
+/GamePanels$2.class
+/GamePanels$3.class
+/GamePanels$4.class
+/GamePanels$5.class
